# atlas-trident

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: default.toml
dashboard/: app.py
docs/: api.md  architecture.md  benchmarking.md
experiments/: conflicting_proposals.py  latency_spike.py  node_failure.py  overload.py  resource_scarcity.py  run_benchmark.py  run_scenario.py
experiments/scenarios/: conflicting_proposals.json  latency_spike.json  node_failure.json  overload.json  resource_scarcity.json
paper/: atlas_paper.tex  atlas_refs.bib
results/sample_reports/: sample_benchmark_report.csv  sample_benchmark_report.json
samples/: sample_events.jsonl  sample_metrics.csv  sample_summary.json
scripts/: run_api.ps1  run_api.sh  run_benchmark.ps1  run_benchmark.sh  run_dashboard.ps1  run_dashboard.sh  run_experiment.ps1  run_experiment.sh  run_lint.ps1  run_lint.sh  run_local.ps1  run_local.sh  run_tests.ps1  setup.ps1  setup.sh
src/atlas/: __init__.py  __main__.py  baselines.py  benchmarking.py  cli.py  config.py  experiment_runner.py  main.py  orchestrator.py  types.py
src/atlas/agent_core/: __init__.py  agent.py  trident.py
tests/: test_api_smoke.py  test_baseline_modes.py  test_benchmark_runner.py  test_config_loading.py  test_execution_safety_gate.py  test_governance_chain.py  test_ledger_consistency.py  test_llm_planner_schema.py  test_orchestrator_integration.py  test_planner_validation.py  test_policy_guard.py  test_trident_scoring.py
(+22 files in other folders)
