[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atlas-trident"
version = "0.1.0"
description = "ATLAS - Agentic Twin Ledger for Autonomous Systems"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "ATLAS Research Prototype" }
]
dependencies = [
  "fastapi==0.115.12",
  "uvicorn[standard]==0.30.6",
  "pydantic==2.8.2",
  "requests==2.32.3",
  "streamlit==1.37.1",
  "pandas==2.2.2"
]

[project.optional-dependencies]
rl = [
  "torch==2.3.1",
  "stable-baselines3==2.3.2"
]
dev = [
  "pytest==8.2.2",
  "httpx==0.27.0",
  "ruff==0.6.9"
]

[project.scripts]
atlas-cli = "atlas.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E501"]
